--- a/Data607-Project2.Rmd
+++ b/Data607-Project2.Rmd
@@ -12,23 +12,14 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(ggplot2)
-
+library(kableExtra)
 ```
 
-# Overview  
+# General Overview  
 
-The goal of the assignment is to practive preparing various datasets and cleaning them using dplyr and tidyverse. We were tasked to choose 
-three of the “wide” datasets identified in the Week 6 Discussion items. For each of the three chosen datasets:
+The goal of the assignment is to practice preparing various data sets and cleaning them using dplyr and tidyverse. We were tasked to choose three of the “wide” datasets identified in the Week 6 Discussion items. For each of the three chosen datasets:
 
-Create a .CSV file (or optionally, a MySQL database!) that includes all of the information included in the dataset. 
-
-Read the information from your .CSV file into R, and use tidyr and dplyr as needed to tidy and transform your data. 
-Perform the analysis requested in the discussion item.
-
-Your code should be in an R Markdown file, posted to rpubs.com, and should include narrative descriptions of your data cleanup work, analysis, and conclusions.
-(2) Please include in your homework submission, for each of the three chosen datasets:
- The URL to the .Rmd file in your GitHub repository, and
- The URL for your rpubs.com web page
+I created a .CSV file that includes all of the information included in the data set. Use tidyr and dplyr as needed to tidy and transform your data. Perform the analysis requested in the discussion item.
 
 <hr>
 
@@ -36,13 +27,13 @@ Your code should be in an R Markdown file, posted to rpubs.com, and should inclu
 
 ## Overview
 
-The first data set I chose was found by ____. The database was called [Ramen Ratings](https://www.kaggle.com/residentmario/ramen-ratings) and it is recorded data of a ramen product review. Each ramen was rated on a 5-point scale to indicate its quality according to the reviewer. The data stays pretty current and has over 2400 lines of data.The recommended analysis suggested by my classmate was to:
+The first data set is called [Ramen Ratings](https://www.kaggle.com/residentmario/ramen-ratings) and it is recorded data of a ramen product review. Each ramen was rated on a 5-point scale to indicate its quality according to the reviewer. The data stays pretty current and has over 2400 lines of data.The recommended analysis suggested by my classmate was to:
 
 1) Analyze the favorite flavor
 2) Find the most popular brand
 3) Find the most popular ramen style
 
-### Get a feel for the data
+### Read the data
 
 ```{r}
 ramen_csv = "https://raw.githubusercontent.com/moiyajosephs/Data607-Project2/main/ramen-ratings.csv"
@@ -50,7 +41,8 @@ ramen = read.csv(ramen_csv,header=TRUE,sep=",")
 summary(ramen)
 ```
 ```{r}
-head(ramen)
+head(ramen) %>% kbl() %>%
+  kable_styling()
 ```
 
 It looks like there are 2580 reviews in total with 7 columns. The review number/id the brand of ramen, variety, style, country and the rating. The last column Top.Ten looks as if it has no values, luckily there is a way to test if this is true.
@@ -68,7 +60,8 @@ topten_empty
 I was wrong before in assuming there were NA values. However I did note that the amount of empty strings does not equal the amount of rows available, that means there were values in the last column, though not many. To find which value it was I filtered  
 ```{r}
 topten_value <- ramen %>% select(Review..,Brand, Variety, Style, Country, Top.Ten) %>% filter(Top.Ten != "")
-topten_value
+head(topten_value) %>% kbl() %>%
+  kable_styling()
 ```
 By filtering the data this way I can understand the point of the column. Now I understand that the column Top.Ten is indicating the rating the ramen got for being top ten best of that given year.
 
@@ -76,33 +69,37 @@ To go into further analysis I will change the empty strings to NA since R has ni
 
 ```{r}
 ramen <- ramen %>% mutate(Top.Ten = replace(Top.Ten, Top.Ten== "", NA )) %>% mutate(Top.Ten = replace(Top.Ten, Top.Ten == "\n", NA ))
-ramen
+head(ramen) %>% kbl() %>%
+  kable_styling()
 ```
 Another thing I noticed is the Stars is of type character. It would be more useful if it was numeric.
 
 ```{r}
 ramen$Stars <- as.numeric(ramen$Stars)
-ramen
+head(ramen) %>% kbl() %>%
+  kable_styling()
 ```
 
 
-## Answer the questions/ suggested analysis
-
-
+## Analysis
 
 ### Analyse the Favorite Flavor
 ```{r}
-ramen %>% select(Variety, Style, Stars) %>% filter(Stars == 5)
+ramen %>% select(Variety, Style, Stars) %>% filter(Stars == 5) %>% kbl() %>%
+  kable_styling()
 ```
 There are 386 5 star ramen in this data set. Hard to say which one is the top, luckily there is a Top.Ten Category to see if the 5 star rated ramen also scored in the Top Ten for the year. 
 
 ```{r}
-ramen %>% select(Variety, Style, Stars,Top.Ten) %>% filter(Stars == 5, !is.na(Top.Ten))
+top_ramen_32 <- ramen %>% select(Variety, Style, Stars,Top.Ten) %>% filter(Stars == 5, !is.na(Top.Ten))
+head(top_ramen_32) %>% kbl() %>%
+  kable_styling()
 ```
 Only 32 values that were rated a full five stars were also in the Top Ten for that year. We can also find the ramen that was rated #1.
 ```{r}
 top_ramen <- ramen %>% select(Variety, Style, Stars, Top.Ten) %>% filter(str_detect(Top.Ten, '#1$'))
-top_ramen
+head(top_ramen) %>% kbl() %>%
+  kable_styling()
 ```
 Only these five values, `r top_ramen[1,1]`, `r top_ramen[1,2]`,`r top_ramen[1,1]`,`r top_ramen[1,3]`,`r top_ramen[1,4]` and `r top_ramen[1,5]`  were #1, had five star and had five star ratings. This also answers one of the questions what is the most popular ramen style. 
 
@@ -115,12 +112,14 @@ From the first analysis we found the most popular ramen style was `r top_ramen[2
 #### Count the number of 5 stars per Style.
 
 ```{r}
-ramen %>% select(Style, Stars) %>% group_by(Style) %>% filter(Stars == 5) %>% count(Stars == 5 ) 
+ramen %>% select(Style, Stars) %>% group_by(Style) %>% filter(Stars == 5) %>% count(Stars == 5 ) %>% kbl() %>%
+  kable_styling()
 ```
 With the table we can see the values that the violin plot dropped, like bar, box and tray. Again pack is the most popular with 239 5 star ratings. It also may be possible that it is the most common type. Below I counted the amount of occurrences of a style to check if my hypothesis is true. Pack again is the most frequent. 
 
 ```{r}
-ramen %>% select(Style) %>% count(Style) 
+ramen %>% select(Style) %>% count(Style) %>% kbl() %>%
+  kable_styling()
 ```
 Here is a graphical output. 
 
@@ -131,32 +130,33 @@ The bar graph above shows just how drastic the difference is between the differe
 
 ### Find the most popular brand
 
-This data has proven difficult to work with because it wont combine all the same brands.
+To determine the most popular brand I will find the brand that received the most five stars. 
 
 ```{r}
-ramen %>% select(Brand,Stars) %>% group_by(Brand) %>% filter(Stars == 5) %>% count(Brand)
+top_brand <- ramen %>% select(Brand,Stars) %>% group_by(Brand) %>% filter(Stars == 5) %>% count(Brand, sort = TRUE)
+head(top_brand) %>% kbl() %>%
+  kable_styling()
 
 ```
+The most popular brand is Nissin that received 76 5 star ratings. 
 
-
-## Part 1 Conclusions
-
-
-
-<hr>
+## Conclusions
+In conclusion the most popular brand is Nissin which received the most five star reviews. Pack is by far the most produced and highly rated style of ramen. Variety was harder to determine but I was able to determine which ones were the most popular by filtering by the top five values and if they were number 1 in Top Ten. 
 
 
 
-# This is a Kaggle data from superhero TV shows  {.tabset}
+# Superhero TV shows  {.tabset}
+
 
 ## Overview
 
-https://www.kaggle.com/anoopkumarraut/superhero-tv-shows/data
+This data set is collected from IMDB.com which and is compiled of superhero tv-shows ratings. [Kaggle Superheroes TV Shows](https://www.kaggle.com/anoopkumarraut/superhero-tv-shows/data) The questions I was asked to answer are below. 
 
-Possible Analysis:
 
-What is the highest-rated TV show of each year.
-What is the highest rated TV show from each category in the data set.
+Analysis:
+
+1) What is the highest-rated TV show of each year.
+2) What is the highest rated TV show from each category in the data set.
 
 
 ```{r}
@@ -165,9 +165,8 @@ tv = read.csv(tv_csv,header=TRUE,sep=",")
 summary(tv)
 ```
 ```{r}
-head(tv)
-
-
+head(tv) %>% kbl() %>%
+  kable_styling()
 
 ```
 
@@ -177,17 +176,27 @@ head(tv)
 
 Some of the television shows release year value is a range instead of a single date. To answer this question, if it is a range I will consider the first year as its release year and the last year indicated as its final year. I will then look for the highest rated show based on a televisions release year. 
 
-First I will seperate the release year by the - between the release and the final year. Some TV shows have no end year, meaning they are still ongoing. 
+First I will separate the release year by the - between the release and the final year. Some TV shows have no end year, meaning they are still ongoing. 
 
 ```{r}
 tv <- tv %>%  separate(release_year, into = c("release", "end"))
-tv
+head(tv) %>% kbl() %>%
+  kable_styling()
 ```
+IMDB rating and votes are also in the wrong format, so I will change them to number. 
+```{r}
+tv$imdb_rating <- as.numeric(tv$imdb_rating)
+tv$imdb_votes <- as.numeric(tv$imdb_votes)
+```
+
+
 Now that the table is separated, I will group by the release year and find the maximum rating for each.
 
 
 ```{r}
-tv %>% select(show_title, imdb_rating,release) %>% group_by(release) %>% slice(which.max(imdb_rating))
+top_year_show <- tv %>% select(show_title, imdb_rating,release) %>% group_by(release) %>% slice(which.max(imdb_rating))
+head(top_year_show) %>% kbl() %>%
+  kable_styling()
 ```
 Here I am able to see all the years and the ratings for the top television shows for that year. In 2022, The Legend of Vox Machina was the highest rated television show so far with a score of 8.6. 
 
@@ -198,36 +207,54 @@ The television data set can have many genres, in  this data set at least 1 genre
 
 ```{r}
 tv <- tv %>%  separate(genre, into = c("genre1", "genre2", "genre3"), sep = ",")
-head(tv)
+head(tv) %>% kbl() %>%
+  kable_styling()
 
 ```
 ```{r}
 tv %>% select(show_title, imdb_rating,genre1) %>% group_by(genre1) %>% slice(which.max(imdb_rating))
+tv %>% kbl() %>%
+  kable_styling()
 ```
-When considering the first genre, each genre is listed seperately with the highest rated televidion show and rating. The genre with the highest rating is *Avatar the Last Airbender*, which is an animation that recieved a score of 9.3.
+When considering the first genre, each genre is listed separately with the highest rated television show and rating. The genre with the highest rating is *Avatar the Last Airbender*, which is an animation that received a score of 9.3.
 
 ```{r}
-tv %>% select(show_title, imdb_rating,genre2) %>% group_by(genre2) %>% slice(which.max(imdb_rating))
-
+tv %>% select(show_title, imdb_rating,genre2) %>% group_by(genre2) %>% slice(which.max(imdb_rating)) %>% kbl() %>%
+  kable_styling()
 ```
 ```{r}
-tv %>% select(show_title, imdb_rating,genre3) %>% group_by(genre3) %>% slice(which.max(imdb_rating))
-
+tv %>% select(show_title, imdb_rating,genre3) %>% group_by(genre3) %>% slice(which.max(imdb_rating)) %>% kbl() %>%
+  kable_styling()
 ```
 
+```{r}
+summary(tv)
+```
+
+## Conclusion
+Action and Adventure are the most popular genres which makes sense considering it is a dataset of superhero TV shows. Superhero TV shows have always been popular with the eldest TV show coming from 1948. A summary function of the cleaned up data set shows the average IMDB rating for television shows are 7.012. There are also 36 missing values. The maximum is 9.3 and the minimum is 2. For the amount of votes per show, the mean value is 432.8, and the amount of missing values are 483.
 
 # Food Scrap Drop-Off Locations in NYC | NYC Open Data  {.tabset}
 
 ## Overview
 
-Which Council Districts have the most drop-offs
-What do those have in common?
-What day/time is most popular for drop-off?
-How many are open year round?
-What do those have in common?
-Do any Community Districts have more then one drop-off? What about Census Tracts?
-Which borough has the most drop-offs
+This data set was taken from [Food Scrap Drop-Off Locations in NYC](https://data.cityofnewyork.us/Environment/Food-Scrap-Drop-Off-Locations-in-NYC/if26-z6xq). It is a collection of data describing locations where NYC residents can drop off their food scraps to be composted. My classmate suggested some questions for analysis and I chose these ones to answer: 
 
+1) Which Council Districts have the most drop-offs?  
+2) What do those have in common?  
+3) How many are open year round?  
+4) What do those have in common?  
+5) Do any Community Districts have more then one drop-off?   
+6) Which borough has the most drop-offs?
+
+```{r}
+food_scrap_csv <- "https://raw.githubusercontent.com/moiyajosephs/Data607-Project2/main/Food_Scrap_Drop-Off_Locations_in_NYC.csv"
+food_scrap <- read.csv(food_scrap_csv,header=TRUE, sep=",")
+head(food_scrap)
+```
+```{r}
+summary(food_scrap)
+```
 
 
 ## Analysis 
@@ -235,14 +262,54 @@ Which borough has the most drop-offs
 ### Which Council Districts have the most drop-offs? What do they have in common?
 
 
-### What day/time is most popular for drop-off?
+```{r}
+# ramen %>% select(Brand,Stars) %>% group_by(Brand) %>% filter(Stars == 5) %>% count(Brand, sort = TRUE)
+council_district <- food_scrap %>% select(Borough,CouncilDist) %>% group_by(Borough) %>%  count(CouncilDist, sort = TRUE)
+head(council_district) %>% kbl() %>%
+  kable_styling()
+```
+The council districts that have the most drop-offs the council district 3(Manhattan). The council district 1(Manhattan) and Queens are tied with 9 food scrap drop offs. There doesn't seem to be any correlation between the top districts other than the food that they do not accept for scraps (no meat, dairy or bones).
 
 ### How many are open year round? What do those have in common?
 
-### Do any Community Districts have more then one drop-off? What about Census Tracts?
+```{r}
+food_scrap %>% count(Open_Months, sort=TRUE) %>% kbl() %>%
+  kable_styling()
+```
+Just counting each occurrence of the Open Months column would not be enough to find the year round food scrap drop offs. "Year Round" as a string has not been entered the same way throughout the dataset, so instead I will look for any occurrence that has the word Year in it. 
 
-### Which borough has the most drop-offs
+```{r}
+food_scrap %>% count(Open_Months, sort=TRUE) %>% filter(str_detect(Open_Months, "Year")) %>% kbl() %>%
+  kable_styling()
+```
+By filtering this way I can see there are 123 year round food scrap drop offs throughout NYC. (Technically the Everyday value also counts as Year Round.)
+
+
+### Do any Community Districts have more then one drop-off?
+```{r}
+food_scrap  %>% count(boroCD, sort=TRUE) %>% kbl() %>% kable_styling()
+```
+Many community districts have more than one drop off. Below is the community district, 401, which had ten drop off centers. 
+
+```{r}
+food_scrap %>% filter(boroCD == 401) %>% kbl() %>% kable_styling()
+```
+By filtering by the community district I can see that it is in Astoria, Queens. All listed in this dataset do year long drop offs. 
+
+
+### Which borough has the most drop-offs?
+
+```{r}
+food_scrap %>% count(Borough, sort = TRUE) %>% kbl() %>% kable_styling()
+
+```
+
+Greenwich value is actually in Manhattan and a mistake in the data set itself. Meaning that Manhattan has 47 drop off centers. Brooklyn has 38, and Queens has 35. 
 
 
 
+
+## Conclusion
+
+In conclusion, there are 152 drop off locations located throughout New York City. Manhattan has the most food scrap drop off locations and most offer year round drop off. Possible further analysis would be to see which one gets the most donations. 
 
